service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: notebooks.my
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: jupyter
              servicePort: 8888
